--- a/modes/world3/config/world3.yaml
+++ b/modes/world3/config/world3.yaml
@@ -21,12 +21,7 @@ sound_player:
       action: play
       loops: -1
       mode_end_action: stop
-  mode_villagermb_stopped:
-    world3mode_music:
-      action: play
-      loops: -1
-      mode_end_action: stop
-  mode_night_stopped:
+  worldmultiball_ended:
     world3mode_music:
       action: play
       loops: -1
@@ -128,5 +123,11 @@ widget_player:
         image: WoodSpruce_Small
 
 event_player:
-   world_collected:
+  world_collected:
     world3_collected
+  mode_villagercontroller_stopped:
+    worldmultiball_ended
+  mode_nightcontroller_stopped:
+    worldmultiball_ended
+  mode_nightvillagercontroller_stopped:
+    worldmultiball_ended
