--- a/modes/world5/config/world5.yaml
+++ b/modes/world5/config/world5.yaml
@@ -21,12 +21,7 @@ sound_player:
       action: play
       loops: -1
       mode_end_action: stop
-  mode_villagermb_stopped:
-    world5mode_music:
-      action: play
-      loops: -1
-      mode_end_action: stop
-  mode_night_stopped:
+  worldmultiball_ended:
     world5mode_music:
       action: play
       loops: -1
@@ -128,5 +123,12 @@ widget_player:
         image: WoodNether_Small
 
 event_player:
-   world_collected:
+  world_collected:
     world5_collected
+  mode_villagercontroller_stopped:
+    worldmultiball_ended
+  mode_nightcontroller_stopped:
+    worldmultiball_ended
+  mode_nightvillagercontroller_stopped:
+    worldmultiball_ended
+  
