--- a/data/audits.yaml
+++ b/data/audits.yaml
@@ -1,9 +1,9 @@
 events:
-  game_ended: 232
-  game_started: 1018
+  game_ended: 235
+  game_started: 1034
 player:
   score:
-    average: 9044481.944444444
+    average: 8987644.705882354
     top:
     - 492815500
     - 353326850
@@ -15,25 +15,26 @@ player:
     - 35334500
     - 35303850
     - 34361450
-    total: 252
+    total: 255
 shots:
-  award_extraball: 92
-  captiveball: 884
+  award_extraball: 93
+  captiveball: 890
   centertarget: 1541
-  collectitem1: 4569
-  collectitem2: 4509
-  collectitem3: 3336
-  collectitem4: 4290
+  collectitem1: 4584
+  collectitem2: 4526
+  collectitem3: 3353
+  collectitem4: 4307
   collectitem5: 1881
-  collectitem_special: 1908
-  craft1: 586
-  craft2: 635
-  craft3: 609
-  craft4: 622
+  collectitem_special: 1914
+  craft1: 587
+  craft2: 637
+  craft3: 613
+  craft4: 624
+  enderdragon_shot: 548
   eyespinner: 594
-  leftslingshot: 5806
-  loopleft: 4522
-  loopright: 3666
+  leftslingshot: 5858
+  loopleft: 4554
+  loopright: 3737
   mb_drop1: 474
   mb_drop2: 1474
   mb_drop3: 1271
@@ -42,15 +43,15 @@ shots:
   mb_drop6: 694
   mb_jackpot: 31
   mb_superjackpot: 55
-  mbnether_drop2: 178
-  mbnether_drop3: 157
+  mbnether_drop2: 187
+  mbnether_drop3: 158
   mbnether_drop4: 53
-  mbnether_drop5: 194
+  mbnether_drop5: 200
   mbnether_superjackpot: 7
-  popbumper1: 5853
-  popbumper2: 8545
-  popbumper3: 10501
-  rightslingshot: 4097
+  popbumper1: 5944
+  popbumper2: 8660
+  popbumper3: 10675
+  rightslingshot: 4146
   set1_center: 76
   set1_left: 158
   set1_right: 322
@@ -63,66 +64,66 @@ shots:
   set4_center: 61
   set4_left: 43
   set4_right: 127
-  skill_scoup: 523
-  spinner: 22847
+  skill_scoup: 528
+  spinner: 23067
   strongholdtravel: 37
-  tool1: 2167
-  tool2: 2816
-  tool3: 1719
+  tool1: 2173
+  tool2: 2821
+  tool3: 1725
   village_jackpot: 22
   villager_jackpot: 155
   villager_spinner: 114
-  world_jackpot: 433
-  worldspinner: 1571
+  world_jackpot: 435
+  worldspinner: 1626
 switches:
-  s_bumperrail: 7699
-  s_captiveball: 885
-  s_centertarget: 4417
-  s_collectitem1: 7591
-  s_collectitem2: 7581
-  s_collectitem3: 4782
-  s_collectitem4: 7201
-  s_collectitem5: 6912
+  s_bumperrail: 7745
+  s_captiveball: 891
+  s_centertarget: 4985
+  s_collectitem1: 7626
+  s_collectitem2: 7619
+  s_collectitem3: 4811
+  s_collectitem4: 7245
+  s_collectitem5: 6961
   s_credit_right: 0
-  s_drop1: 3064
-  s_drop2: 4795
-  s_drop3: 15693
-  s_drop4: 3016
-  s_drop5: 6544
-  s_drop6: 4179
-  s_left_flipper: 39920
-  s_leftinlane: 902
-  s_leftoutlane: 745
-  s_leftsling: 5809
-  s_loopleft: 4861
-  s_loopright: 4429
+  s_drop1: 3101
+  s_drop2: 4848
+  s_drop3: 16063
+  s_drop4: 3052
+  s_drop5: 6610
+  s_drop6: 4222
+  s_left_flipper: 40204
+  s_leftinlane: 907
+  s_leftoutlane: 750
+  s_leftsling: 5861
+  s_loopleft: 4893
+  s_loopright: 4500
   s_maint: 0
-  s_plungerlane: 3966
-  s_popbumper1: 5853
-  s_popbumper2: 8545
-  s_popbumper3: 10501
-  s_portal: 386
-  s_right_flipper: 33720
-  s_rightinlane: 177
+  s_plungerlane: 4036
+  s_popbumper1: 5944
+  s_popbumper2: 8660
+  s_popbumper3: 10675
+  s_portal: 398
+  s_right_flipper: 34087
+  s_rightinlane: 179
   s_rightoutlane: 391
-  s_rightsling: 4097
-  s_scoup: 2311
-  s_spinner: 22850
+  s_rightsling: 4146
+  s_scoup: 2341
+  s_spinner: 23070
   s_start: 63
   s_tilt: 0
-  s_tooltarget1: 3227
-  s_tooltarget2: 4026
-  s_tooltarget3: 2523
-  s_topbumperleft: 1811
-  s_topbumperright: 2674
-  s_topkicker: 6643
-  s_trough1: 3623
-  s_trough2: 2972
-  s_trough3: 2681
-  s_trough4: 2321
-  s_troughjam: 3015
-  s_upperdrop: 2956
-  s_whitedot1: 1243
-  s_whitedot2: 1422
-  s_whitedot3: 1417
-  s_whitedot4: 1447
+  s_tooltarget1: 3245
+  s_tooltarget2: 4059
+  s_tooltarget3: 2539
+  s_topbumperleft: 1866
+  s_topbumperright: 2743
+  s_topkicker: 6776
+  s_trough1: 3688
+  s_trough2: 3024
+  s_trough3: 2718
+  s_trough4: 2357
+  s_troughjam: 3067
+  s_upperdrop: 2965
+  s_whitedot1: 1261
+  s_whitedot2: 1442
+  s_whitedot3: 1442
+  s_whitedot4: 1457
