--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -110,9 +110,9 @@ event_player:
   #=========== CONTROLS WHEN WORLDS ARE STARTED ============
   #START WORLD 1
   mode_base_started{current_player.world_id==0}:
-    world1_start
+    #world1_start
     #world5_start
-    #theend_start
+    theend_start
 
   #ENABLE NEXT WORLDS WHEN NETHER MODE RETURNS
   multiball_nethermb_ended:
@@ -131,27 +131,27 @@ event_player:
 
   world1_collected{current_player.multiplier_mb==1}:
     nethermode_ready
-    villagermb_disable
+    villagerornightmb_disable
   world2_collected{current_player.multiplier_mb==1}:
     nethermode_ready
-    villagermb_disable
+    villagerornightmb_disable
   world3_collected{current_player.multiplier_mb==1}:
     nethermode_ready
-    villagermb_disable
+    villagerornightmb_disable
   world4_collected{current_player.multiplier_mb==1}:
     nethermode_ready
-    villagermb_disable
+    villagerornightmb_disable
   world5_collected{current_player.multiplier_mb==1}:
     stronghold_ready
-    villagermb_disable
+    villagerornightmb_disable
 
   event_nightorvillagermultiball_ended{current_player.world_id != 5 and current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining == 0}:
     nethermode_ready
-    villagermb_disable
+    villagerornightmb_disable
 
   event_nightorvillagermultiball_ended{current_player.world_id == 5 and current_player.world_item1_remaining == 0 and current_player.world_item2_remaining == 0 and current_player.world_item3_remaining == 0 and current_player.world_item4_remaining == 0}:
     stronghold_ready
-    villagermb_disable
+    villagerornightmb_disable
 
   event_nightorvillagermultiball_ended{current_player.world_jackpot_worlds>1}:
     outlanegate_open
