End Mode Changes

--- a/modes/theend/config/theend.yaml
+++ b/modes/theend/config/theend.yaml
@@ -54,6 +54,111 @@ state_machines:
 shots:
   enderdragon_shot:
     switch: s_centertarget
+  enderdragon_shot1:                      #DROP TARGETS
+        switch: s_collectitem1
+        profile: sp_enderdragon
+        advance_events: mode_theend_started
+        show_tokens:
+            light: l_collectitem1
+  enderdragon_shot2:
+        switch: s_collectitem2
+        profile: sp_enderdragon
+        advance_events: mode_theend_started
+        show_tokens:
+            light: l_collectitem2
+  enderdragon_shot3:
+        switch: s_collectitem3
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_collectitem3
+  enderdragon_shot4:
+        switch: s_collectitem4
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_collectitem4
+  enderdragon_shot5:
+        switch: s_collectitem5
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_collectitem5
+  enderdragon_shot6:                   #TOOLS
+        switch: s_tooltarget3
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_toolcollect3
+  enderdragon_shot7:
+        switch: s_tooltarget2
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_toolcollect2
+  enderdragon_shot8:
+        switch: s_tooltarget1
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_toolcollect1
+  enderdragon_shot9:                   #CRAFT
+        switch: s_whitedot1
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_craft1
+  enderdragon_shot10:
+        switch: s_whitedot2
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_craft2
+  enderdragon_shot11:
+        switch: s_whitedot3
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_craft3
+  enderdragon_shot12:
+        switch: s_whitedot4
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_craft4
+  enderdragon_shot13:               #SPINNER
+        switch: s_spinner
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_spinner4
+  enderdragon_shot14:               
+        switch: s_spinner
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_spinner3
+  enderdragon_shot15:               
+        switch: s_spinner
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_spinner2
+  enderdragon_shot16:               
+        switch: s_spinner
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_spinner1
+  enderdragon_shot17:               
+        switch: s_centertarget
+        profile: sp_enderdragon
+        show_tokens:
+            light: l_worldtarget
+
+
+shot_profiles:
+  sp_enderdragon:
+    states:
+      - name: unlit
+        show: "off"
+      - name: lit
+        show: "on"
+    loop: true
+    advance_on_hit: false
+
+shot_groups:
+    upper_lanes:
+        shots: enderdragon_shot1, enderdragon_shot2, enderdragon_shot3, enderdragon_shot4, enderdragon_shot5, enderdragon_shot6, enderdragon_shot7, enderdragon_shot8, enderdragon_shot9, enderdragon_shot10, enderdragon_shot11, enderdragon_shot12, enderdragon_shot13, enderdragon_shot14, enderdragon_shot15, enderdragon_shot16, enderdragon_shot17
+        enable_events: mode_theend_started
+        disable_events: mode_theend_ending
+        rotate_events: timer_enderdragon_restore_timer_tick
 
 multiball_locks:
   endlocktop:
