--- a/data/audits.yaml
+++ b/data/audits.yaml
@@ -1,6 +1,6 @@
 events:
   game_ended: 235
-  game_started: 1034
+  game_started: 1046
 player:
   score:
     average: 8987644.705882354
@@ -18,7 +18,7 @@ player:
     total: 255
 shots:
   award_extraball: 93
-  captiveball: 890
+  captiveball: 893
   centertarget: 1541
   collectitem1: 4584
   collectitem2: 4526
@@ -30,11 +30,17 @@ shots:
   craft2: 637
   craft3: 613
   craft4: 624
-  enderdragon_shot: 548
+  enderdragon_shot: 766
+  enderdragon_shot1: 32
+  enderdragon_shot17: 17
+  enderdragon_shot2: 48
+  enderdragon_shot3: 41
+  enderdragon_shot4: 46
+  enderdragon_shot5: 29
   eyespinner: 594
-  leftslingshot: 5858
-  loopleft: 4554
-  loopright: 3737
+  leftslingshot: 5894
+  loopleft: 4571
+  loopright: 3758
   mb_drop1: 474
   mb_drop2: 1474
   mb_drop3: 1271
@@ -48,10 +54,10 @@ shots:
   mbnether_drop4: 53
   mbnether_drop5: 200
   mbnether_superjackpot: 7
-  popbumper1: 5944
-  popbumper2: 8660
-  popbumper3: 10675
-  rightslingshot: 4146
+  popbumper1: 5978
+  popbumper2: 8690
+  popbumper3: 10738
+  rightslingshot: 4174
   set1_center: 76
   set1_left: 158
   set1_right: 322
@@ -64,8 +70,8 @@ shots:
   set4_center: 61
   set4_left: 43
   set4_right: 127
-  skill_scoup: 528
-  spinner: 23067
+  skill_scoup: 531
+  spinner: 23102
   strongholdtravel: 37
   tool1: 2173
   tool2: 2821
@@ -76,54 +82,54 @@ shots:
   world_jackpot: 435
   worldspinner: 1626
 switches:
-  s_bumperrail: 7745
-  s_captiveball: 891
-  s_centertarget: 4985
-  s_collectitem1: 7626
-  s_collectitem2: 7619
-  s_collectitem3: 4811
-  s_collectitem4: 7245
-  s_collectitem5: 6961
+  s_bumperrail: 7765
+  s_captiveball: 894
+  s_centertarget: 5204
+  s_collectitem1: 7663
+  s_collectitem2: 7677
+  s_collectitem3: 4863
+  s_collectitem4: 7298
+  s_collectitem5: 6998
   s_credit_right: 0
-  s_drop1: 3101
-  s_drop2: 4848
-  s_drop3: 16063
-  s_drop4: 3052
-  s_drop5: 6610
-  s_drop6: 4222
-  s_left_flipper: 40204
-  s_leftinlane: 907
-  s_leftoutlane: 750
-  s_leftsling: 5861
-  s_loopleft: 4893
-  s_loopright: 4500
+  s_drop1: 3118
+  s_drop2: 4871
+  s_drop3: 16217
+  s_drop4: 3067
+  s_drop5: 6636
+  s_drop6: 4240
+  s_left_flipper: 40395
+  s_leftinlane: 912
+  s_leftoutlane: 757
+  s_leftsling: 5897
+  s_loopleft: 4910
+  s_loopright: 4521
   s_maint: 0
-  s_plungerlane: 4036
-  s_popbumper1: 5944
-  s_popbumper2: 8660
-  s_popbumper3: 10675
-  s_portal: 398
-  s_right_flipper: 34087
-  s_rightinlane: 179
+  s_plungerlane: 4094
+  s_popbumper1: 5978
+  s_popbumper2: 8690
+  s_popbumper3: 10738
+  s_portal: 408
+  s_right_flipper: 34303
+  s_rightinlane: 184
   s_rightoutlane: 391
-  s_rightsling: 4146
-  s_scoup: 2341
-  s_spinner: 23070
+  s_rightsling: 4174
+  s_scoup: 2363
+  s_spinner: 23105
   s_start: 63
   s_tilt: 0
-  s_tooltarget1: 3245
-  s_tooltarget2: 4059
-  s_tooltarget3: 2539
-  s_topbumperleft: 1866
-  s_topbumperright: 2743
-  s_topkicker: 6776
-  s_trough1: 3688
-  s_trough2: 3024
-  s_trough3: 2718
-  s_trough4: 2357
-  s_troughjam: 3067
+  s_tooltarget1: 3252
+  s_tooltarget2: 4066
+  s_tooltarget3: 2544
+  s_topbumperleft: 1887
+  s_topbumperright: 2766
+  s_topkicker: 6833
+  s_trough1: 3733
+  s_trough2: 3058
+  s_trough3: 2739
+  s_trough4: 2378
+  s_troughjam: 3101
   s_upperdrop: 2965
-  s_whitedot1: 1261
-  s_whitedot2: 1442
-  s_whitedot3: 1442
-  s_whitedot4: 1457
+  s_whitedot1: 1265
+  s_whitedot2: 1452
+  s_whitedot3: 1451
+  s_whitedot4: 1463
